@@ -146,7 +146,7 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>28.5.1</version>
+			<version>28.7.0</version>
 		</dependency>
 		
 		<dependency>
