@@ -1,3 +1,5 @@
+- Refactor: Upgraded dependency of fenixedu-academic-core (PrecedentDegreeInformation split into 'completed' and 'previous')
+
 2.9.1 (16-03-2020)
 - Bug fix: Correcting Java 11 release
 
